--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^5.5.2
   google_maps_flutter: ^2.12.1
   image_picker: ^1.1.2
+  firebase_storage: ^12.4.6
 
 dev_dependencies:
   flutter_test:
